# lemmatizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
include/: Trie.h  trie.h
src/: Trie.cpp  main.cpp  trie.cpp  wrap.cpp
tests/: trie_test.cpp
wrapper/: pytrie.pyx  trie.pxd
